@@ -36,6 +36,7 @@ FIELD_CHANNEL_LEVEL_2 = "channel_level_2"
 FIELD_CHANNEL_OPERATION_MODE = "channel_operation_mode"
 FIELD_CHANNEL_STATE = "channel_state"
 FIELD_COLOR = "color"
+FIELD_COLOR_LEVEL = "color_temp"
 FIELD_COMFORT_MODE = "comfort_mode"
 FIELD_CONTROL_MODE = "control_mode"
 FIELD_CURRENT = "current"
@@ -103,6 +104,7 @@ class EntityDefinition(StrEnum):
     IP_SIREN = "IPSiren"
     RF_COVER = "RfCover"
     RF_DIMMER = "RfDimmer"
+    RF_DIMMER_COLOR_TEMP = "RfDimmer_Color_Temp"
     RF_DIMMER_WITH_VIRT_CHANNEL = "RfDimmerWithVirtChannel"
     RF_LOCK = "RfLock"
     RF_THERMOSTAT = "RfThermostat"
@@ -357,6 +359,20 @@ entity_definition: dict[str, dict[int | str | EntityDefinition, Any]] = {
                 ED_REPEATABLE_FIELDS: {
                     FIELD_LEVEL: "LEVEL",
                     FIELD_RAMP_TIME: "RAMP_TIME",
+                },
+            },
+        },
+        EntityDefinition.RF_DIMMER_COLOR_TEMP: {
+            ED_DEVICE_GROUP: {
+                ED_PRIMARY_CHANNEL: 0,
+                ED_REPEATABLE_FIELDS: {
+                    FIELD_LEVEL: "LEVEL",
+                    FIELD_RAMP_TIME: "RAMP_TIME",
+                },
+                ED_FIELDS: {
+                    1: {
+                        FIELD_COLOR_LEVEL: "LEVEL",
+                    },
                 },
             },
         },
