@@ -1,5 +1,6 @@
 Version 0.38.5 (2022-03-22)
 - Use interface_id for interface events
+- Add support for color temp dimmer
 
 Version 0.38.4 (2022-03-21)
 - Fix interface name for BidCos-Wired
